--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,3 +10,23 @@ jobs:
         run: npm install
       - name: Run Tests
         run: npm test
+      - name: Build Docker Image
+        run: docker build -t lukecashion123/app-name .
+      - name: Push Docker Image
+        run: |
+          echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
+          docker push lukecashion123/app-name
+      - name: Deploy to AWS Elastic Beanstalk
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_REGION: ${{ secrets.AWS_REGION }}
+        run: |
+          # Install AWS CLI
+          pip install --upgrade awscli
+          # Initialize Elastic Beanstalk application
+          eb init your-app-name --platform docker --region $AWS_REGION
+          # Deploy to Elastic Beanstalk
+          eb deploy
+
+
