--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,24 +8,22 @@ jobs:
         uses: actions/checkout@v2
       - name: Install Dependencies
         run: npm install
-      - name: Run Tests
-        run: npm test
       - name: Build Docker Image
-        run: docker build -t lukecashion123/app-name .
+        run: docker build -t lukecashion123/my-app .
       - name: Push Docker Image
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
-          docker push lukecashion123/app-name
+          docker push lukecashion123/my-app
       - name: Deploy to AWS Elastic Beanstalk
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_REGION: ${{ secrets.AWS_REGION }}
+          AWS_REGION: us-east-1
         run: |
           # Install AWS CLI
           pip install --upgrade awscli
           # Initialize Elastic Beanstalk application
-          eb init your-app-name --platform docker --region $AWS_REGION
+          eb init my-app --platform docker --region $AWS_REGION
           # Deploy to Elastic Beanstalk
           eb deploy
 
