--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,16 @@ jobs:
         run: |
           echo "${{ secrets.DOCKER_PASSWORD }}" | docker login -u "${{ secrets.DOCKER_USERNAME }}" --password-stdin
           docker push lukecashion123/my-app
+      - name: Install AWS CLI
+        run: pip install --upgrade awscli
+      - name: Install Elastic Beanstalk CLI
+        run: pip install awsebcli
       - name: Deploy to AWS Elastic Beanstalk
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           AWS_REGION: us-east-1
         run: |
-          # Install AWS CLI
-          pip install --upgrade awscli
           # Initialize Elastic Beanstalk application
           eb init my-app --platform docker --region $AWS_REGION
           # Deploy to Elastic Beanstalk
